# CMPT433---Digital-Theremin

./: .gitignore  CMakeLists.txt  README.md  hand_commands.c  out  rotary_encoder.c  rotary_encoder.h  setup_commands  udp_controls.c  udp_controls.h  udp_in.c  udp_test.py
app/: CMakeLists.txt
app/include/: audio_mixer.h  button_controls.h  dial_controls.h  distance_articulator.h  hand_commands.h  knob_controls.h  lcd_menus.h  period_timer.h  program_manager.h  udp_controls.h  volume_controls.h
app/src/: audio_mixer.c  button_controls.c  dial_controls.c  distance_articulator.c  hand_commands.c  knob_controls.c  lcd_menus.c  main.c  period_timer.c  program_manager.c  udp_controls.c  volume_controls.c
common/include/: utils.h
common/src/: utils.c
hal/: CMakeLists.txt
hal/include/: distance_sensor.h  gpio.h  hardware_manager.h  i2c.h  joystick.h  joystick_button.h  lcd.h  lcd_menus.h  rotary_button.h  rotary_encoder.h  sine_mixer.h
hal/src/: distance_sensor.c  gpio.c  hardware_manager.c  i2c.c  joystick.c  joystick_button.c  lcd.c  rotary_button.c  rotary_encoder.c  sine_mixer.c
lcd/lib/Config/: DEV_Config.c
lcd/lib/GUI/: GUI_Paint.c
python/: mediapipe_handtrack.py  readme.txt  udp_module.py
